--- a/index.html
+++ b/index.html
@@ -432,13 +432,13 @@ a, a:visited { color : #0050e7; }
 <hr />
 -->
   
-  
+  https://github.com/Li-Chongyi/PAPERS/blob/master/NTIRE2021_NonHomogeneous_Dehazing_Report_compressed.pdf
  <h2>
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Honors & Awards:</h2>
 
 <ul>
 <li>Three papers have been selected as ESI Highly Cited Paper.</li>
-<li>6th, NTIRE 2021 Challenge on Non-Homogeneous Image Dehazing, 2021</li>
+<li>6th, NTIRE 2021 Challenge on Non-Homogeneous Image Dehazing, 2021.<a href="https://github.com/Li-Chongyi/PAPERS/blob/master/NTIRE2021_NonHomogeneous_Dehazing_Report_compressed.pdf">PDF</a></li> 
 <li>2020 National Postdoctoral Forum on the Development and Application of Artificial Intelligence, Tianjin, China. Excellence Award.</li>
 <li>Distinguished Dissertation Award of Beijing Society of Image and Graphics, 2018.</li>
 <li>"Outstanding Graduate Student" in Tianjin University, 2018.</li>
