--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@ a, a:visited { color : #0050e7; }
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Recent News:</h2>
 
 <ul> 
+<li> 2021/04 -- One paper has been accepted by <strong>IEEE Trans. Image Processing.</strong> </li>
 <li> 2021/04 -- 6th, NTIRE 2021 Challenge on Non-Homogeneous Image Dehazing</li>
 <li> 2021/04 -- One paper has been accepted by <strong>IEEE Geoscience and Remote Sensing Letters  (IF: 3.833)</strong></li>
 <li> 2021/04 -- One paper has been accepted by <strong>Applied Intelligence (IF: 3.325)</strong></li>
