--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ a, a:visited { color : #0050e7; }
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Recent News:</h2>
 
 <ul> 
-<li> 2021/04 -- One paper has been accepted by <strong>IEEE Trans. Image Processing.</strong> </li>
+<li> 2021/04 -- One paper has been accepted by <strong>IEEE Transactions on Image Processing</strong> </li>
 <li> 2021/04 -- 6th, NTIRE 2021 Challenge on Non-Homogeneous Image Dehazing</li>
 <li> 2021/04 -- One paper has been accepted by <strong>IEEE Geoscience and Remote Sensing Letters  (IF: 3.833)</strong></li>
 <li> 2021/04 -- One paper has been accepted by <strong>Applied Intelligence (IF: 3.325)</strong></li>
@@ -127,7 +127,7 @@ a, a:visited { color : #0050e7; }
 <li> 2020/12 -- Two papers have been selected as <strong>ESI Highly Cited Paper</strong></li>
 <li> 2020/12 -- One paper has been accepted by <strong>Information Science</strong></li>
 <li> 2020/10 -- 2020 National Postdoctoral Forum on the Development and Application of Artificial Intelligence. <strong>Excellence Award</strong></li>
-<li> 2020/10 -- One paper has been accepted by <strong>IEEE Trans. Image Processing.</strong> </li>
+<li> 2020/10 -- One paper has been accepted by <strong>IEEE Transactions on Image Processing</strong> </li>
 <li> 2020/09 -- One paper has been accepted by <strong>NeurIPS</strong> </li>
 <li>We released a survey about image colorization (Image Colorization: A Survey and Dataset). <a href="https://arxiv.org/pdf/2008.10774.pdf" target="_blank"><font color="#ff0000">[Arxiv Version]</font></a></a></li>
 <li><strong>Chongyi Li</strong>, Runmin Cong, Yongri Piao, Qianqian Xu, and Chen Change Loy, <ud2>RGB-D Salient Object Detection with Cross-Modality Modulation and Selection</ud2> is accepted by <strong>ECCV2020</strong>. <a href="https://li-chongyi.github.io/Proj_ECCV20" target="_blank"><font color="#ff0000">[Project page]</font></a></a></li> 
