--- a/proj_benchmark.html
+++ b/proj_benchmark.html
@@ -98,6 +98,7 @@ The benchmark evaluations and the proposed Water-Net demonstrate the performance
 <h4>Water-Net Code:</h4>    
 <p>
 <a href="https://github.com/Li-Chongyi/DUIENet_Code" target="_blank"><font color="#ff0000">[TensorFlow Code]</font></a><br>
+<a href="https://github.com/BIGWangYuDong/UWEnhancement" target="_blank"><font color="#ff0000">[PyTorch Code by Yudong Wang (yudongwang1226@gmail.com)]</font></a><br>
 </p>  
   
 <h4>TIP 2016 Code:</h4>    
