--- a/index.html
+++ b/index.html
@@ -161,9 +161,9 @@ a, a:visited { color : #0050e7; }
                Ruicheng Feng, <b>Chongyi Li</b>, Huaijin Chen, Shuai Li, Chen Change Loy, Jinwei Gu.
                 <br>
                 <span class="links">
-                    <a href="">PDF</a>| 
-                    <a href="">Project Page</a>| 
-                    <a href="">Code</a>
+                    <a href="https://arxiv.org/abs/2104.09556">PDF</a>| 
+                    <a href="https://jnjaby.github.io/projects/UDC/">Project Page</a>| 
+                    <a href="https://github.com/jnjaby/DISCNet">Code</a>
                 </span>
             </p>
           </div>
