--- a/index.html
+++ b/index.html
@@ -151,6 +151,30 @@ a, a:visited { color : #0050e7; }
 <h2><a id="reaserch-page" class="anchor" href="#reaserch-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Projects:</h2>
         <br>
 	  <div class="publication">
+            <img src=".sub_img/chronology.png" class="publogo" width="300 px">
+            <p> 
+                <strong>
+                    <a href="">Lighting the Darkness in the Deep Learning Era</a>
+                </strong>
+		<em><b>Deep Learning-based Low-Light Image Enhancement: A Survey, 2021</b></em>
+                <br> 
+               <b>Chongyi Li</b>, Chunle Guo, Linghao Han, Jun Jiang, Ming-Ming Cheng, Jinwei Gu, Chen Change Loy.
+                <br>
+                <span class="links">
+                    <a href="https://arxiv.org/abs/2104.10729">PDF</a>| 
+                    <a href="https://github.com/Li-Chongyi/Lighting-the-Darkness-in-the-Deep-Learning-Era-Open/">Project Page</a>| 
+                    <a href="http://mc.nankai.edu.cn/ll/">Online Platform</a>
+                </span>
+            </p>
+          </div>
+          <br>
+          <br>
+	<br />
+	<br />
+	<br />
+	<br />	
+	
+	  <div class="publication">
             <img src="./UDC_logo.png" class="publogo" width="300 px">
             <p> 
                 <strong>
