--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ a, a:visited { color : #0050e7; }
 <h2><a id="reaserch-page" class="anchor" href="#reaserch-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Projects:</h2>
         <br>
 	  <div class="publication">
-            <img src=".sub_img/chronology.png" class="publogo" width="300 px">
+            <img src="./sub_img/chronology.png" class="publogo" width="300 px">
             <p> 
                 <strong>
                     <a href="">Lighting the Darkness in the Deep Learning Era</a>
