--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ a, a:visited { color : #0050e7; }
                 <strong>
                     <a href="">Lighting the Darkness in the Deep Learning Era</a>
                 </strong>
-		<em><b>Deep Learning-based Low-Light Image Enhancement: A Survey, 2021</b></em>
+		<em><b>A Survey, 2021</b></em>
                 <br> 
                <b>Chongyi Li</b>, Chunle Guo, Linghao Han, Jun Jiang, Ming-Ming Cheng, Jinwei Gu, Chen Change Loy.
                 <br>
