--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ a, a:visited { color : #0050e7; }
 	<br />
 	
 	  <div class="publication">
-            <img src="./UDC_logo.png" class="publogo" width="300 px">
+            <img src="./sub_img/UDC_logo.png" class="publogo" width="300 px">
             <p> 
                 <strong>
                     <a href="">Removing Diffraction Image Artifacts in Under-Display Camera via Dynamic Skip Connection Network</a>
