--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@ a, a:visited { color : #0050e7; }
 	<br />
 	
         <div class="publication">
-            <img src="./logo/benchmark_logo.png" class="publogo" height="110" width="300 px">
+            <img src="./logo/benchmark_logo.png" class="publogo" width="300 px">
             <p> 
                 <strong>
                     <a href="https://ieeexplore.ieee.org/document/8917818">An Underwater Image Enhancement Benchmark Dataset and Beyond</a>
@@ -306,7 +306,7 @@ a, a:visited { color : #0050e7; }
 	<br />
 	
         <div class="publication">
-            <img src="./logo/tgars_logo.png" class="publogo" height="130" width="300 px">
+            <img src="./logo/tgars_logo.png" class="publogo" width="300 px">
             <p> 
                 <strong>
                     <a href="https://ieeexplore.ieee.org/document/8793227">Nested Network With Two-Stream Pyramid for Salient Object Detection in Optical Remote Sensing Images</a>
@@ -329,7 +329,7 @@ a, a:visited { color : #0050e7; }
 	<br />
 	
         <div class="publication">
-            <img src="./logo/PR_logo.jpg" class="publogo" height="130" width="300 px">
+            <img src="./logo/PR_logo.png" class="publogo" width="300 px">
             <p> 
                 <strong>
                     <a href="https://www.sciencedirect.com.remotexs.ntu.edu.sg/science/article/pii/S0031320319303401">Underwater Scene Prior Inspired Deep Underwater Image and Video Enhancement</a>
@@ -415,7 +415,7 @@ a, a:visited { color : #0050e7; }
 	<br />
 	
         <div class="publication">
-            <img src="./logo/depth_SR_logo.png" class="publogo" height="130" width="300 px">
+            <img src="./logo/depth_SR_logo.png" class="publogo"  width="300 px">
             <p> 
                 <strong>
                     <a href="https://ieeexplore.ieee.org/document/8579111">Hierarchical Features Driven Residual Learning for Depth Map Super-Resolution</a>
