--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@ a, a:visited { color : #0050e7; }
 	<br />
 	
         <div class="publication">
-            <img src="./logo/ACMMM_logo.png" class="publogo" width="300 px">
+            <img src="./logo/ACMMM_framework.png" class="publogo" width="300 px">
             <p> 
                 <strong>
                     <a href="https://dl.acm.org/doi/10.1145/3394171.3413928">NuI-Go: Recursive Non-Local Encoder-Decoder Network for Retinal Image Non-Uniform Illumination Removal</a>
