--- a/index.html
+++ b/index.html
@@ -156,7 +156,8 @@ a, a:visited { color : #0050e7; }
                 <strong>
                     <a href="">Lighting the Darkness in the Deep Learning Era</a>
                 </strong>
-		<em><b>A Survey, 2021</b></em>
+		  <br> 
+		<em><b>A Survey, An Online Platform, A New Dataset, 2021</b></em>
                 <br> 
                <b>Chongyi Li</b>, Chunle Guo, Linghao Han, Jun Jiang, Ming-Ming Cheng, Jinwei Gu, Chen Change Loy.
                 <br>
@@ -179,7 +180,7 @@ a, a:visited { color : #0050e7; }
                     <a href="">Removing Diffraction Image Artifacts in Under-Display Camera via Dynamic Skip Connection Network</a>
                 </strong>
 		 <br> 
-		<em><b>CVPR, 2021</b></em>
+		<em><b>IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2021</b></em>
                 <br> 
                Ruicheng Feng, <b>Chongyi Li</b>, Huaijin Chen, Shuai Li, Chen Change Loy, Jinwei Gu.
                 <br>
