--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ a, a:visited { color : #0050e7; }
                     <a href="">Removing Diffraction Image Artifacts in Under-Display Camera via Dynamic Skip Connection Network</a>
                 </strong>
 		 <br> 
-		<em><b>IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2021</b></em>
+		<em><b>CVPR, 2021</b></em>
                 <br> 
                Ruicheng Feng, <b>Chongyi Li</b>, Huaijin Chen, Shuai Li, Chen Change Loy, Jinwei Gu.
                 <br>
@@ -202,7 +202,7 @@ a, a:visited { color : #0050e7; }
                 <strong>
                     <a href="https://ieeexplore.ieee.org/document/9369102">Learning to Enhance Low-Light Image via Zero-Reference Deep Curve Estimation</a>
                 </strong>
-		<em><b>TPAMI, 2021</b></em>
+		<em><b>IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI), 2021</b></em>
                 <br>
                <b>Chongyi Li</b>, Chunle Guo, Chen Change Loy.
                 <br>
@@ -241,7 +241,7 @@ a, a:visited { color : #0050e7; }
 	<br />
 	<br />
         <div class="publication">
-            <img src="./logo/framework.png" class="publogo" width="300 px">
+            <img src="./logo/ZeroDCE_result_logo.png" class="publogo" width="300 px">
             <p> 
                 <strong>
                     <a href="https://openaccess.thecvf.com/content_CVPR_2020/papers/Guo_Zero-Reference_Deep_Curve_Estimation_for_Low-Light_Image_Enhancement_CVPR_2020_paper.pdf">Zero-Reference Deep Curve Estimation for Low-Light Image Enhancement</a>
@@ -316,7 +316,7 @@ a, a:visited { color : #0050e7; }
                     <a href="https://ieeexplore.ieee.org/document/8917818">An Underwater Image Enhancement Benchmark Dataset and Beyond</a>
                 </strong>
 		    <br>
-		 <em><b>TIP, 2020</b></em>
+		 <em><b>IEEE Transactions on Image Processing (TIP), 2020</b></em>
                 <br>
                 <b>Chongyi Li</b>, Chunle Guo, Wenqi Ren, Runmin Cong, Junhui Hou, Sam Kwong, Dacheng Tao.
                 <br>
@@ -340,7 +340,7 @@ a, a:visited { color : #0050e7; }
                     <a href="https://ieeexplore.ieee.org/document/8793227">Nested Network With Two-Stream Pyramid for Salient Object Detection in Optical Remote Sensing Images</a>
                 </strong>
 		     <br>
-		 <em><b>TGARS, 2020</b></em>
+		 <em><b>IEEE Transactions on Geoscience and Remote Sensing (TGRS), 2020</b></em>
                 <br>
                 <b>Chongyi Li</b>, Runmin Cong, Junhui Hou, Sanyi Zhang, Yue Qian, Sam Kwong.
                 <br>
@@ -364,7 +364,7 @@ a, a:visited { color : #0050e7; }
                     <a href="https://www.sciencedirect.com.remotexs.ntu.edu.sg/science/article/pii/S0031320319303401">Underwater Scene Prior Inspired Deep Underwater Image and Video Enhancement</a>
                 </strong>
 		     <br>
-		 <em><b>PR, 2020</b></em>
+		 <em><b>Pattern Recognition (PR), 2020</b></em>
                 <br>
                 <b>Chongyi Li</b>, Saeed Anwar, Fatih Porikli.
                 <br>
@@ -387,7 +387,7 @@ a, a:visited { color : #0050e7; }
                     <a href="https://ieeexplore.ieee.org.remotexs.ntu.edu.sg/stamp/stamp.jsp?tp=&arnumber=8998588">ASIF-Net: Attention Steered Interweave Fusion Network for RGB-D Salient Object Detection</a>
                 </strong>
 		     <br>
-		 <em><b>TCyb, 2020</b></em>
+		 <em><b>IEEE Transactions on Cybernetics (TCyb), 2020</b></em>
                 <br>
                 <b>Chongyi Li</b>, Runmin Cong, Sam Kwong, et al.
                 <br>
@@ -431,7 +431,7 @@ a, a:visited { color : #0050e7; }
                     <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9292434">Dense attention fluid network for salient object detection in optical remote sensing images</a>
                 </strong>
 		     <br>
-		 <em><b>TIP, 2020</b></em>
+		 <em><b>IEEE Transactions on Image Processing (TIP), 2020</b></em>
                 <br>
                 Qijian Zhang, Runmin Cong, <b>Chongyi Li</b>, Ming-Ming Cheng, Yuming Fang, Xiaochun Cao, Yao Zhao, and Sam Kwong.
                 <br>
@@ -454,7 +454,7 @@ a, a:visited { color : #0050e7; }
                     <a href="https://ieeexplore.ieee.org/document/8579111">Hierarchical Features Driven Residual Learning for Depth Map Super-Resolution</a>
                 </strong>
 		     <br>
-		<em><b>TIP, 2019</b></em>
+		<em><b>IEEE Transactions on Image Processing (TIP), 2019</b></em>
                 <br>
                 Chunle Guo*, <b>Chongyi Li*</b>, Jichang Guo, Runmin Cong, Huazhu Fu, Ping Han.
                 <br>
