--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@ a, a:visited { color : #0050e7; }
 		     <br>
 		 <em><b>IEEE Transactions on Cybernetics (TCyb), 2020</b></em>
                 <br>
-                <b>Chongyi Li</b>, Runmin Cong, Sam Kwong, et al.
+                <b>Chongyi Li</b>, Runmin Cong, Sam Kwong, Junhui Hou, Huazhu Fu, Guopu Zhu, Dingwen Zhang, Qiangming Huang.
                 <br>
                 <span class="links">
                     <a href="https://ieeexplore.ieee.org.remotexs.ntu.edu.sg/stamp/stamp.jsp?tp=&arnumber=8998588">PDF</a>| 
@@ -426,7 +426,7 @@ a, a:visited { color : #0050e7; }
 	<br />
 	
         <div class="publication">
-            <img src="./logo/TIP_RS2020_logo.png" class="publogo" width="300 px">
+            <img src="./logo/TIP_RS2020_results_logo.png" class="publogo" width="300 px">
             <p> 
                 <strong>
                     <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9292434">Dense attention fluid network for salient object detection in optical remote sensing images</a>
