--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@ a, a:visited { color : #0050e7; }
                     <a href="https://ieeexplore.ieee.org/document/8793227">Nested Network With Two-Stream Pyramid for Salient Object Detection in Optical Remote Sensing Images</a>
                 </strong>
 		     <br>
-		 <em><b>IEEE Transactions on Geoscience and Remote Sensing (TGRS), 2020</b></em>
+		 <em><b>IEEE Trans Geosci Remote Sens (TGRS), 2020</b></em>
                 <br>
                 <b>Chongyi Li</b>, Runmin Cong, Junhui Hou, Sanyi Zhang, Yue Qian, Sam Kwong.
                 <br>
