--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@ a, a:visited { color : #0050e7; }
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Recent News:</h2>
 
 <ul>
-<li> 2021/04 -- We release our deep learning-based low-light image enhancement platform <strong>LoLi-Platform</strong>. You can find the <a href="https://github.com/Li-Chongyi/Lighting-the-Darkness-in-the-Deep-Learning-Era-Open/" target="_blank"><font color="#ff0000">[LoLi-Platform]</font></a>. <a href="https://arxiv.org/abs/2104.10729" target="_blank"><font color="#ff0000">[Survey]</font></a>.Have fun!</li>
+<li> 2021/04 -- Invited talk@<strong>SenseTime</strong> </li>
+<li> 2021/04 -- We release our deep learning-based low-light image enhancement platform <strong>LoLi-Platform</strong>. You can find the <a href="https://github.com/Li-Chongyi/Lighting-the-Darkness-in-the-Deep-Learning-Era-Open/" target="_blank"><font color="#ff0000">[LoLi-Platform]</font></a>. <a href="https://arxiv.org/abs/2104.10729" target="_blank"><font color="#ff0000">[Survey]</font></a>. Have fun!</li>
 <li> 2021/04 -- We release the code of our Under-Display Camera Image Restoration <strong>(CVPR 2021)</strong>. You can find the <a href="https://jnjaby.github.io/projects/UDC/" target="_blank"><font color="#ff0000">[Code]</font></a>. Have fun!</li>
 <li> 2021/04 -- One paper has been accepted by <strong>IEEE Transactions on Image Processing</strong> </li>
 <li> 2021/04 -- 6th, NTIRE 2021 Challenge on Non-Homogeneous Image Dehazing</li>
