--- a/Proj_Ucolor.html
+++ b/Proj_Ucolor.html
@@ -246,8 +246,8 @@
             </td>
             <td width="20%">
               <center>
-                <a href="" target="_blank" class="imageLink"><img src="./TIP21_Ucolor_files/paper_logo.jpg" ,="" width="40%"></a><br><br>
-                <a href="" target="_blank">Supplementary</a>
+                <a href="https://github.com/Li-Chongyi/PAPERS/blob/master/Ucolor_manuscript_suppy.pdf" target="_blank" class="imageLink"><img src="./TIP21_Ucolor_files/paper_logo.jpg" ,="" width="40%"></a><br><br>
+                <a href="https://github.com/Li-Chongyi/PAPERS/blob/master/Ucolor_manuscript_suppy.pdf" target="_blank">Supplementary</a>
               </center>
             </td>
             <td width="20%">
