--- a/index.html
+++ b/index.html
@@ -233,8 +233,8 @@ a, a:visited { color : #0050e7; }
                 <br>
                 <span class="links">
                     <a href="">PDF</a>| 
-                    <a href="">Project Page</a>| 
-                    <a href="">Code</a>
+                    <a href="https://li-chongyi.github.io/Proj_Ucolor.html">Project Page</a>| 
+                    <a href="https://github.com/Li-Chongyi/Ucolor">Code</a>
                 </span>
             </p>
           </div>
