--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ a, a:visited { color : #0050e7; }
 	<br />
 	
      <div class="publication">
-            <img src="./logo/UColor_logo.png" class="publogo" width="300 px">
+            <img src="./logo/ZeroDCE_result_logo1.png" class="publogo" width="300 px">
             <p> 
                 <strong>
                     <a href="">Underwater Image Enhancement via Medium Transmission-Guided Multi-Color Space Embedding</a>
