--- a/sub_publication.html
+++ b/sub_publication.html
@@ -178,7 +178,7 @@
 <a id="publications-J-pages" class="anchor" href="#publications-J-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Invited Talk:</h4>
 
 <ol>
-<li><strong>Learning to Enhance Low-Light Image via Zero-Reference Deep Curve Estimation</strong>. Invited Talk, SenseTime. <a href="https://github.com/Li-Chongyi/PAPERS/blob/master/S-Lab-v2_sensetime_talk_lichongyi.pdf" target="_blank"><font color="#ff0000">[PPT]</font></a><a href="" target="_blank"><font color="#ff0000">[Talk Video (@bilibili in Chinese AI画质)], 23/04/2021</font></a></a></li>    
+<li><strong>Learning to Enhance Low-Light Image via Zero-Reference Deep Curve Estimation</strong>. Invited Talk, SenseTime. <a href="https://github.com/Li-Chongyi/PAPERS/blob/master/S-Lab-v2_sensetime_talk_lichongyi.pdf" target="_blank"><font color="#ff0000">[PPT]</font></a><a href="https://www.bilibili.com/video/BV1Gv411j7HN?p=2" target="_blank"><font color="#ff0000">[Talk Video (@bilibili in Chinese AI画质)], 23/04/2021</font></a></a></li>    
 <li><strong>Underwater Image Enhancement: Challenges, Benchmarks, and Solutions</strong>. Invited Talk, Center of Digital Media Information Processing, Beijing Jiaotong University. <a href="https://github.com/Li-Chongyi/PAPERS/blob/master/BeijiaoPoster.jpg" target="_blank"><font color="#ff0000">[Poster]</font></a></a></li>  
 <li><strong>ASIF-Net: Attention Steered Interweave Fusion Network for RGB-D salient Object Detection</strong>. Invited Talk, ShenZhen Institutes of Advanced Technology, Chinese Academy of Sciences. <a href="https://github.com/Li-Chongyi/PAPERS/blob/master/talk_poster1.jpg" target="_blank"><font color="#ff0000">[Poster]</font></a></a></li>  
 
