--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@ a, a:visited { color : #0050e7; }
 <li> 2021/01 -- One paper has been accepted by <strong>Engineering Applications of Artificial Intelligence (IF: 3.526)</strong></li>
 <li> 2021/01 -- One paper has been accepted by <strong>Frontiers of Computer Science (IF: 1.940)</strong></li>
 <li> 2021/01 -- I am nominated with honor to serve as an <strong>Associate Editor</strong> of the Springer Journal of Signal, Image and Video Processing (IF: 1.794).</strong></li>
+<!--
 <li> 2020/12 -- Two papers have been selected as <strong>ESI Highly Cited Paper</strong></li>
 <li> 2020/12 -- One paper has been accepted by <strong>Information Science</strong></li>
 <li> 2020/10 -- 2020 National Postdoctoral Forum on the Development and Application of Artificial Intelligence. <strong>Excellence Award</strong></li>
@@ -137,7 +138,7 @@ a, a:visited { color : #0050e7; }
 <li>We released a survey about image colorization (Image Colorization: A Survey and Dataset). <a href="https://arxiv.org/pdf/2008.10774.pdf" target="_blank"><font color="#ff0000">[Arxiv Version]</font></a></a></li>
 <li><strong>Chongyi Li</strong>, Runmin Cong, Yongri Piao, Qianqian Xu, and Chen Change Loy, <ud2>RGB-D Salient Object Detection with Cross-Modality Modulation and Selection</ud2> is accepted by <strong>ECCV2020</strong>. <a href="https://li-chongyi.github.io/Proj_ECCV20" target="_blank"><font color="#ff0000">[Project page]</font></a></a></li> 
 <li>We release the testing code of our Zero-DCE for low-light image enhancement <strong>(CVPR 2020)</strong>. You can find the <a href="https://github.com/Li-Chongyi/Zero-DCE" target="_blank"><font color="#ff0000">[Code]</font></a>. Have fun!</li>
-<!--<li><strong>Chongyi Li</strong>, Runmin Cong, Chunle Guo, Hua Li, Chunjie Zhang, Feng Zheng, and Yao Zhao, <ud2>A Parallel Down-Up Fusion Network for Salient Object Detection in Optical Remote Sensing Images</ud2> is accepted by <strong>Neurocomputing</strong>.</li>
+<li><strong>Chongyi Li</strong>, Runmin Cong, Chunle Guo, Hua Li, Chunjie Zhang, Feng Zheng, and Yao Zhao, <ud2>A Parallel Down-Up Fusion Network for Salient Object Detection in Optical Remote Sensing Images</ud2> is accepted by <strong>Neurocomputing</strong>.</li>
 <li>We release more details of our Zero-DCE for low-light image enhancement <strong>(CVPR 2020)</strong>. You can find the <a href="https://li-chongyi.github.io/Proj_Zero-DCE.html" target="_blank"><font color="#ff0000">[Project Page]</font></a>. Have fun!</li>
 <li><strong>Chongyi Li</strong>, Runmin Cong, Sam Kwong, Junhui Hou, Huazhu Fu, Guopu Zhu, Dingwen Zhang, and Qingming Huang, <ud2>ASIF-Net: Attention Steered Interweave Fusion Network for RGB-D salient Object Detection</ud2> is accepted by <strong>IEEE Transactions on Cybernetics</strong>.</li>
 <li>We released the dataset and testing model of our TIP 2019 <ud2>An Underwater Image Enhancement Benchmark Dataset and Beyond</ud2>. Have fun! <a href="https://li-chongyi.github.io/proj_benchmark.html" target="_blank"><font color="#ff0000">[Project page]</font></a></a></li>
