--- a/index.html
+++ b/index.html
@@ -472,7 +472,29 @@ a, a:visited { color : #0050e7; }
           </div>
           <br>
           <br>
-
+	 <br />
+	 <br />	
+	
+        <div class="publication">
+            <img src="./logo/depth_SR_logo.png" class="publogo"  width="300 px">
+            <p> 
+                <strong>
+                    <a href="https://ieeexplore.ieee.org/document/7574330">Underwater Image Enhancement by Dehazing with Minimum Information Loss and Histogram Distribution Prior</a>
+                </strong>
+		     <br>
+		<em><b>IEEE Transactions on Image Processing (TIP), 2016</b></em>
+                <br>
+                <b>Chongyi Li</b>, Jichang Guo, Runmin Cong, Yanwei Pang, Bo Wang.
+                <br>
+                <span class="links">
+                    <a href="https://ieeexplore.ieee.org/document/7574330">PDF</a>| 
+                    <a href="">Project Page</a>| 
+                    <a href="https://github.com/Li-Chongyi/TIP2016-code">Code</a>
+                </span>
+            </p>
+          </div>
+          <br>
+          <br>
 </div>
 <br>
 <hr />
