--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@ a, a:visited { color : #0050e7; }
 	 <br />	
 	
         <div class="publication">
-            <img src="./logo/depth_SR_logo.png" class="publogo"  width="300 px">
+            <img src="./logo/TIP16_logo.png" class="publogo"  width="300 px">
             <p> 
                 <strong>
                     <a href="https://ieeexplore.ieee.org/document/7574330">Underwater Image Enhancement by Dehazing with Minimum Information Loss and Histogram Distribution Prior</a>
