--- a/index.html
+++ b/index.html
@@ -476,6 +476,30 @@ a, a:visited { color : #0050e7; }
 	 <br />	
 	
         <div class="publication">
+            <img src="./logo/TMM19_logo.png" class="publogo"  width="300 px">
+            <p> 
+                <strong>
+                    <a href="https://ieeexplore.ieee.org/document/8792133">PDR-Net: Perception-Inspired Single Image Dehazing Network With Refinement</a>
+                </strong>
+		     <br>
+		<em><b>IEEE Transactions on Multimedia  (TMM), 2019</b></em>
+                <br>
+                <b>Chongyi Li</b>, Chunle Guo, Jichang Guo, Ping Han, Huazhu Fu, Runmin Cong.
+                <br>
+                <span class="links">
+                    <a href="https://ieeexplore.ieee.org/document/8792133">PDF</a>| 
+                    <a href="">Project Page</a>| 
+                    <a href="">Code</a>
+                </span>
+            </p>
+          </div>
+          <br>
+          <br>
+	 <br />
+	 <br />	
+	
+	
+        <div class="publication">
             <img src="./logo/TIP16_logo.png" class="publogo"  width="300 px">
             <p> 
                 <strong>
