--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@ Signal Processing : Image Communication
   
   
 <h2>
-<a id="reaserch-page" class="anchor" href="#reaserch-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Misc:</h2>
+<a id="reaserch-page" class="anchor" href="#reaserch-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Miscellaneous:</h2>
 
  
 <ul>
