--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ a, a:visited { color : #0050e7; }
   
 <p>
 <small>lichongyi25@gmail.com</small><br><br>
-<a href="https://github.com/Li-Chongyi/" target="_blank">[GitHub]</a>  
+<i class="fa fa-github" aria-hidden="true"></i><a href="https://github.com/Li-Chongyi/" target="_blank">[GitHub]</a>  
 <a href="http://dblp.uni-trier.de/pers/hd/l/Li:Chongyi" target="_blank">[DBLP]</a>  <br>
 <a href="https://scholar.google.com/citations?user=1_I0P-AAAAAJ&hl=en" target="_blank">[Google Scholar]</a> <br>
 </p> <br>
