--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@ a, a:visited { color : #0050e7; }
 <header>
 <h7>Chongyi Li</h7><br><br>
 <div>
-<img src="sub_img/lichongyi_photo.jpg" border="0" width="80%"><br></div><br>
+<img src="sub_img/lichongyi_photo.jpg" border="0" width="90%"><br></div><br>
 
   
 <p>
-<div class=about-icons>
+
 <small>📧lichongyi25@gmail.com</small><br><br>
-<i class="fa fa-fw fa-envelope"></i><a href="https://github.com/Li-Chongyi/" target="_blank">[GitHub]</a>  
+<a href="https://github.com/Li-Chongyi/" target="_blank">[GitHub]</a>  
 <a href="http://dblp.uni-trier.de/pers/hd/l/Li:Chongyi" target="_blank">[DBLP]</a>  <br>
 <a href="https://scholar.google.com/citations?user=1_I0P-AAAAAJ&hl=en" target="_blank">[Google Scholar]</a> <br>
 </p> <br>
@@ -66,7 +66,7 @@ a, a:visited { color : #0050e7; }
 <p class="view"><a href="sub_publication.html">Publications</a></p>
 <p class="view"><a href="sub_projects.html">Projects</a></p>
 </header>
-</div>
+
 <section>
 
 <h2>
