--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 <!-- Meta tags for search engines to crawl -->
 <meta name="robots" content="index,follow">
 <head>
+ <!-- 地址栏显示 -->
+ <link rel="Shortcut Icon" href="./favicon.ico"  type="image/x-icon" />
+ <!-- 收藏栏也显示 -->
+ <link rel="Bookmark" href="./favicon.ico" type="image/x-icon" />
 <!--<meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="chrome=1">-->
   <title>Homepage of Chongyi Li</title>
