--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 <meta name="robots" content="index,follow">
 <head>
  <!-- 地址栏显示 -->
- <link rel="Shortcut Icon" href="./favicon.ico"  type="image/x-icon" />
+ <link rel="Shortcut Icon" href="./favicon.ico" sizes=16x16  type="image/x-icon" />
  <!-- 收藏栏也显示 -->
- <link rel="Bookmark" href="./favicon.ico" type="image/x-icon" />
+ <link rel="Bookmark" href="./favicon.ico" sizes=16x16 type="image/x-icon" />
 <!--<meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="chrome=1">-->
   <title>Homepage of Chongyi Li</title>
