--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ a, a:visited { color : #0050e7; }
   
 <p>
 
-<small>📧lichongyi25@gmail.com</small><br><br>
+<small>📧lichongyi25@gmail.com</small><br>
 <small>📧chongyi.li@ntu.edu.sg</small><br><br>
 <a href="https://github.com/Li-Chongyi/" target="_blank">[GitHub]</a>  
 <a href="http://dblp.uni-trier.de/pers/hd/l/Li:Chongyi" target="_blank">[DBLP]</a>  <br>
