--- a/index.html
+++ b/index.html
@@ -65,9 +65,10 @@ a, a:visited { color : #0050e7; }
 <a href="http://dblp.uni-trier.de/pers/hd/l/Li:Chongyi" target="_blank">[DBLP]</a>  <br>
 <a href="https://scholar.google.com/citations?user=1_I0P-AAAAAJ&hl=en" target="_blank">[Google Scholar]</a> <br>
 </p> <br>
-<p class="view"><a href="https://li-chongyi.github.io/"><i class="fa fa-camera-retro fa-lg"></i> Homepage</a></p>
+<p class="view"><a href="https://li-chongyi.github.io/">Homepage</a></p>
 <p class="view"><a href="sub_publication.html">Publications</a></p>
 <p class="view"><a href="sub_projects.html">Projects</a></p>
+<i class="fa fa-camera-retro fa-lg"></i> 
 </header>
 
 <section>
