--- a/index.html
+++ b/index.html
@@ -68,7 +68,6 @@ a, a:visited { color : #0050e7; }
 <p class="view"><a href="https://li-chongyi.github.io/">Homepage</a></p>
 <p class="view"><a href="sub_publication.html">Publications</a></p>
 <p class="view"><a href="sub_projects.html">Projects</a></p>
-<i class="fa fa-camera-retro fa-lg"></i> 
 </header>
 
 <section>
@@ -84,7 +83,7 @@ a, a:visited { color : #0050e7; }
 <br><strong>2016/12-2017/12</strong>, I was a joint Ph.D. student at Research School of Engineering, Australian National University (ANU), Canberra, Australia, under the supervision of Prof. <a href="http://www.porikli.com/"><font color="#1C86EE">Fatih Porikli</font></a> (IEEE Fellow).</br>
 
 <br><strong>2014/09-2018/07</strong>, I was a Ph.D. student at School of Electrical and Information Engineering, Tianjin University (TJU), Tianjin, China, under the supervision of Prof. <a href="http://seea.tju.edu.cn/szdw/xxx/201709/t20170902_298201.htm"><font color="#1C86EE">Jichang Guo</font></a>.</br>
-
+<i class="fa fa-camera-retro fa-lg"></i> fa-lg
 <hr />
 </p>
 <h2>
