--- a/sub_publication.html
+++ b/sub_publication.html
@@ -18,14 +18,15 @@
 
   
 <p>
-<small>lichongyi25@gmail.com</small><br><br>
+<small>📧lichongyi25 at gmail.com</small><br>
+<small>📧chongyi.li at ntu.edu.sg</small><br><br>
 <a href="https://github.com/Li-Chongyi" target="_blank">[GitHub]</a>  
 <a href="http://dblp.uni-trier.de/pers/hd/l/Li:Chongyi" target="_blank">[DBLP]</a>  <br>
 <a href="https://scholar.google.com/citations?user=1_I0P-AAAAAJ&hl=en" target="_blank">[Google Scholar]</a> <br>
 </p> <br>
 <p class="view"><a href="https://li-chongyi.github.io/">Homepage</a></p>
 <p class="view"><a href="sub_publication.html">Publications</a></p>
-<p class="view"><a href="sub_projects.html">Projects</a></p>
+<!--<p class="view"><a href="sub_projects.html">Projects</a></p>-->
 </header>
 
 <section>
