--- a/index.html
+++ b/index.html
@@ -593,7 +593,7 @@ a, a:visited { color : #0050e7; }
 Springer Journal of Signal, Image and Video Processing (IF: 1.794)
 
 <br><strong>Guest Editor</strong></br>
-Signal Processing : Image Communication
+Signal Processing : Image Communication (Management Guest Editor)
 
 <br>Multimedia Tools and Applications
 
