--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@ a, a:visited { color : #0050e7; }
 	<br />
 	
         <div class="publication">
-            <img src="./logo/TIP_RS2020_results_logo.png" class="publogo" width="300 px">
+            <img src="./logo/TIP_RS2020_logo.png" class="publogo" width="300 px">
             <p> 
                 <strong>
                     <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9292434">Dense attention fluid network for salient object detection in optical remote sensing images</a>
