--- a/index.html
+++ b/index.html
@@ -557,15 +557,15 @@ a, a:visited { color : #0050e7; }
 
 <ul>
 <li>Three papers have been selected as ESI Highly Cited Paper. <a href="https://github.com/Li-Chongyi/PAPERS/blob/master/%E9%AB%98%E5%80%8D%E5%BC%95-%E8%8B%B1%E6%96%87version.pdf"  target="_blank">>PDF</a></li>
-<li>6th, NTIRE 2021 Challenge on Non-Homogeneous Image Dehazing, 2021. <a href="https://github.com/Li-Chongyi/PAPERS/blob/master/NTIRE2021_NonHomogeneous_Dehazing_Report_compressed.pdf" target="_blank">PDF</a></li> 
+<li>6th, NTIRE 2021 Challenge on Non-Homogeneous Image Dehazing, 2021. <embed src="https://github.com/Li-Chongyi/PAPERS/blob/master/NTIRE2021_NonHomogeneous_Dehazing_Report_compressed.pdf" type="application/pdf" />PDF</a></li> 
 <li>2020 National Postdoctoral Forum on the Development and Application of Artificial Intelligence, Tianjin, China. Excellence Award. <a href="https://github.com/Li-Chongyi/PAPERS/blob/master/%E5%8D%9A%E5%90%8E%E4%BC%98%E7%A7%80%E5%A5%96.pdf">PDF</a></li>
 <li>Distinguished Dissertation Award of Beijing Society of Image and Graphics, 2018.</li>
 <li>"Outstanding Graduate Student" in Tianjin University, 2018.</li>
 <!--<li>Bohai Securities Fellowship, 2017.</li>
 <li>"Merit Student" in Tianjin University, 2017.</li>
 <li>"Advanced Individual" in the creative working, 2017.</li>
-<li>China Scholarship Council (CSC) scholarships, 2016.</li>
-<li>The First Class Academic Scholarship in Tianjin University, 2015, 2016.</li>
+<li>China Scholarship Council (CSC) scholarships, 2016.</li><a href="https://github.com/Li-Chongyi/PAPERS/blob/master/NTIRE2021_NonHomogeneous_Dehazing_Report_compressed.pdf" target="_blank">
+<li>The First Class Academic Scholarship in Tianjin University, 2015, 2016.</li><embed src="https://sumanbogati.github.io/sample.pdf" type="application/pdf" />
 <li>"Advanced Individual" in international exchange, 2015.</li>
 <li>"Advanced Individual" in the creative working, 2015.</li>-->
 
