--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ a, a:visited { color : #0050e7; }
 <a id="Biography-page" class="anchor" href="#biography-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to Chongyi Li (李重仪)'s Homepage</h2>
 <div style="text-align: justify; display: block; margin-right: auto;">
 <p>
-<br><strong>2020/01-now</strong>, I join in the MMLab@NTU as a research fellow and work with Dr.<a href="http://personal.ie.cuhk.edu.hk/~ccloy/index.html"><font color="#1C86EE"> Chen Change Loy</font></a>,  School of Computer Science and Engineering, Nanyang Technological University (NTU), Singapore.</br>
+<br><strong>2020/01-now</strong>, I join in the <a href="https://www.mmlab-ntu.com/"><font color="#1C86EE"> MMLab@NTU</font></a> as a research fellow and work with Dr.<a href="http://personal.ie.cuhk.edu.hk/~ccloy/index.html"><font color="#1C86EE"> Chen Change Loy</font></a>,  School of Computer Science and Engineering, Nanyang Technological University (NTU), Singapore.</br>
 
 <br><strong>2018/10-2020/01</strong>, I was a postdoctoral fellow and worked with Chair Prof. <a href="http://www.cs.cityu.edu.hk/~cssamk/research_group/index.html"><font color="#1C86EE">Sam Kwong</font></a> (IEEE Fellow), Department of Computer Science, City University of Hong Kong (CityU), Kowloon, Hong Kong.</br>
 
