--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@ a, a:visited { color : #0050e7; }
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Recent News:</h2>
 
 <ul>
+<li> 2021/05 -- One paper has been selected as <strong>ESI Highly Cited Paper</strong></li>
 <li> 2021/04 -- We release the code of our Zero-DCE++ (TPAMI2021).</li>
 <li> 2021/04 -- We release the code of our Ucolor (TIP2021).</li>
 <li> 2021/04 -- Invited talk@<strong>SenseTime</strong> about AI Photo Enhancement. You can find the video @<strong>bilibili</strong> <a href="https://www.bilibili.com/video/BV1Gv411j7HN?p=2" target="_blank"><font color="#ff0000">[Video in Chinese]</font></a>. </li>
