--- a/Proj_Ucolor.html
+++ b/Proj_Ucolor.html
@@ -268,9 +268,10 @@
           author ={Li, Chongyi and Anwar, Saeed and Hou, Junhui and Cong, Runmin and Guo, Chunle and Ren, Wenqi},
           title = {Underwater Image Enhancement via Medium Transmission-Guided Multi-Color Space Embedding},
           journal = {IEEE Transactions on Image Processing},
-          pape={},
+          Volume={30},
+          pape={4985-5000},
           year = {2021},
-          doi={}
+          doi={10.1109/TIP.2021.3076367}
           }
           </pre>
         </div>
