--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ a, a:visited { color : #0050e7; }
 
 <ul>
 <div style="text-align: justify; display: block; margin-right: auto;">
-<p>My primary reseach interests include image processing, computer vision, and deep learning, particularly in the domains of 
+<p>My primary reseach interests include artificial intelligence, machine learning, computer vision, and image processing, particularly in the domains of 
   <li><strong>Image and video restoration and enhancement</strong> The purpose is to develop algorithms to process an image or video so that result is more suitable than original image or video for specific application. The specific research topics are</li> 
   <ol type="a" start="1">
       <li>restoring and enhancing the images and videos captured in adverse weather (hazy, foggy, sandy, dusty, rainy, snowy day)</li>
