--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@ a, a:visited { color : #0050e7; }
 <li>FYP 2020-2021: Student: Sihao Chen, Project: Learning to See in the Dark <a href="https://drive.google.com/file/d/12Vu-n2Kw3DV3qa6VfOVTpbyy8TGfRIQz/view?usp=sharing">[Final Report--Video]</a></li>
 <li>Master Project 2021: Student: Zurang Liu, Project: Deep Image Harmonization</li>
 <li>Master Project 2020: Student: Qiming Ai, Project: Deep Photo Enhancement</li>
-<li>NTU AI6126: Advanced Computer Vision, Teaching Assistant, 2020</li>
+<li>NTU CE6126: MSAI Advanced Computer Vision, Teaching Assistant, Fall 2020</li>
 </ul>
 <br>
 <hr /> 
