--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ a, a:visited { color : #0050e7; }
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Recent News:</h2>
 
 <ul>
-<li> 2021/05 --I am selected as <strong>Outstanding Reviewer</strong></li>, IEEE CVPR 2021
+<li> 2021/05 --I am selected as <strong>Outstanding Reviewer</strong>, IEEE CVPR 2021</li>
 <li> 2021/05 -- One paper has been selected as <strong>ESI Highly Cited Paper</strong></li>
 <li> 2021/04 -- We release the code of our Zero-DCE++ (TPAMI2021).</li>
 <li> 2021/04 -- We release the code of our Ucolor (TIP2021).</li>
