--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ a, a:visited { color : #0050e7; }
 
 <br><strong>2016/12-2017/12</strong>, I was a joint Ph.D. student at Research School of Engineering, Australian National University (ANU), Canberra, Australia, under the supervision of Prof. <a href="http://www.porikli.com/"><font color="#1C86EE">Fatih Porikli</font></a> (IEEE Fellow).</br>
 
-<br><strong>2014/09-2018/07</strong>, I was a Ph.D. student at School of Electrical and Information Engineering, Tianjin University (TJU), Tianjin, China, under the supervision of Prof. <a href="http://seea.tju.edu.cn/szdw/xxx/201709/t20170902_298201.htm"><font color="#1C86EE">Jichang Guo</font></a>.</br>
+<br><strong>2014/09-2018/07</strong>, I was a Ph.D. student at School of Electrical and Information Engineering, Tianjin University (TJU), Tianjin, China, under the supervision of Prof. <a href="http://seea.tju.edu.cn/info/1014/1453.htm"><font color="#1C86EE">Jichang Guo</font></a>.</br>
 
 <hr />
 </p>
