--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@ a, a:visited { color : #0050e7; }
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Recent News:</h2>
 
 <ul>
-<li> 2021/05 --I am selected as <strong>Outstanding Reviewer</strong>, IEEE CVPR 2021</li>
-<li> 2021/05 -- One paper has been selected as <strong>ESI Highly Cited Paper</strong></li>
+<li> 2021/05 --I am recognized as <strong>Outstanding Reviewer</strong>, IEEE CVPR 2021</li>
+<li> 2021/05 -- One paper has been recognized as <strong>ESI Highly Cited Paper</strong></li>
 <li> 2021/04 -- We release the code of our Zero-DCE++ (TPAMI2021).</li>
 <li> 2021/04 -- We release the code of our Ucolor (TIP2021).</li>
 <li> 2021/04 -- Invited talk@<strong>SenseTime</strong> about AI Photo Enhancement. You can find the video @<strong>bilibili</strong> <a href="https://www.bilibili.com/video/BV1Gv411j7HN?p=2" target="_blank"><font color="#ff0000">[Video in Chinese]</font></a>. </li>
@@ -130,12 +130,12 @@ a, a:visited { color : #0050e7; }
 <li> 2021/03 -- One book chapter has been published in <strong>World Scientific</strong></li>
 <li> 2021/03 -- One paper has been accepted by <strong>IEEE Transactions on Pattern Analysis and Machine Intelligence (IF: 17.861)</strong></li>
 <li> 2021/03 -- One paper hits on <strong>CVPR 2021</strong></li>
-<li> 2021/01 -- One paper has been selected as <strong>ESI Highly Cited Paper</strong></li>
+<li> 2021/01 -- One paper has been recognized as <strong>ESI Highly Cited Paper</strong></li>
 <li> 2021/01 -- One paper has been accepted by <strong>Engineering Applications of Artificial Intelligence (IF: 3.526)</strong></li>
 <li> 2021/01 -- One paper has been accepted by <strong>Frontiers of Computer Science (IF: 1.940)</strong></li>
 <li> 2021/01 -- I am nominated with honor to serve as an <strong>Associate Editor</strong> of the Springer Journal of Signal, Image and Video Processing (IF: 1.794).</strong></li>
 <!--
-<li> 2020/12 -- Two papers have been selected as <strong>ESI Highly Cited Paper</strong></li>
+<li> 2020/12 -- Two papers have been recognized as <strong>ESI Highly Cited Paper</strong></li>
 <li> 2020/12 -- One paper has been accepted by <strong>Information Science</strong></li>
 <li> 2020/10 -- 2020 National Postdoctoral Forum on the Development and Application of Artificial Intelligence. <strong>Excellence Award</strong></li>
 <li> 2020/10 -- One paper has been accepted by <strong>IEEE Transactions on Image Processing</strong> </li>
@@ -558,7 +558,7 @@ a, a:visited { color : #0050e7; }
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Honors & Awards:</h2>
 
 <ul>
-<li>Four papers have been selected as ESI Highly Cited Paper. <a href="https://github.com/Li-Chongyi/PAPERS/blob/master/%E9%AB%98%E5%80%8D%E5%BC%95-%E8%8B%B1%E6%96%87version.pdf"  target="_blank">PDF</a></li>
+<li>Four papers have been recognized as ESI Highly Cited Paper. <a href="https://github.com/Li-Chongyi/PAPERS/blob/master/%E9%AB%98%E5%80%8D%E5%BC%95-%E8%8B%B1%E6%96%87version.pdf"  target="_blank">PDF</a></li>
 <li>CVPR (Outstanding Reviewer in 2021). <a href="http://cvpr2021.thecvf.com/node/184"  target="_blank">PDF</a></li>
 <li>6th, NTIRE 2021 Challenge on Non-Homogeneous Image Dehazing, 2021. <a href="https://github.com/Li-Chongyi/PAPERS/blob/master/NTIRE2021_NonHomogeneous_Dehazing_Report_compressed.pdf" target="_blank">PDF</a></li> 
 <li>2020 National Postdoctoral Forum on the Development and Application of Artificial Intelligence, Tianjin, China. Excellence Award. <a href="https://github.com/Li-Chongyi/PAPERS/blob/master/%E5%8D%9A%E5%90%8E%E4%BC%98%E7%A7%80%E5%A5%96.pdf">PDF</a></li>
