--- a/index.html
+++ b/index.html
@@ -627,8 +627,8 @@ Signal Processing : Image Communication (Management Guest Editor)
 <li><a href="https://unsplash.com/"><font color="#1C86EE">Unsplash</font></a></li>
 <li><a href="https://pngtree.com/"><font color="#1C86EE">Pngtree</font></a></li>
 <li><a href="https://www.wordclouds.com/"><font color="#1C86EE">WordClouds</font></a></li>
-<li><a href="https://emojipedia.org/"><font color="#1C86EE">Emojipedia</font></a></li
-<li><a href="https://deviparikh.medium.com/how-we-write-rebuttals-dc84742fece1/"><font color="#1C86EE">How we write rebuttals</font></a></li
+<li><a href="https://emojipedia.org/"><font color="#1C86EE">Emojipedia</font></a></li>
+<li><a href="https://deviparikh.medium.com/how-we-write-rebuttals-dc84742fece1/"><font color="#1C86EE">How we write rebuttals</font></a></li>
 </ul>
 <br>
 
