--- a/index.html
+++ b/index.html
@@ -613,7 +613,7 @@ Signal Processing : Image Communication (Management Guest Editor)
 
 <li><strong>SPIE</strong>:</li> JEI
 
-<li><strong>Conference</strong>:</li>ICPR 2018; ACM MM 2019;ICME 2020; ACM MM2020; MICCAI 2020; AAAI 2021; CVPR 2021; IJCAI 2021;ICME 2021; MICCAI 2021; ACM MM2021; ICCV2021
+<li><strong>Conference</strong>:</li>ICPR 2018; ACM MM 2019;ICME 2020; ACM MM2020; MICCAI 2020; AAAI 2021; CVPR 2021; IJCAI 2021;ICME 2021; MICCAI 2021; ACM MM2021; ICCV2021; NeurIPS2021; ICLR2022
 </ul>
 <br>
 <hr />    
