--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ a, a:visited { color : #0050e7; }
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Recent News:</h2>
 
 <ul>
-<li> 2021/07 --Our Zero-DCE (Zero-DCE++) for low-light image enhancement was used in the 1st place solutions for UG2+ Challenge 2021 -- (Semi-)supervised Face detection in the low light condition (https://arxiv.org/abs/2107.00818). Check our Zero-DCE(Zero-DCE) (https://li-chongyi.github.io/Proj_Zero-DCE++.html).</li>
+<li> 2021/07 --Our Zero-DCE (Zero-DCE++) for low-light image enhancement was used in the 1st place solutions for UG2+ Challenge 2021 -- (Semi-)supervised Face detection in the low light condition <a href="https://arxiv.org/abs/2107.00818" target="_blank"><font color="#ff0000">[1st place solution]</font></a>. Check our Zero-DCE (Zero-DCE++) <a href="https://li-chongyi.github.io/Proj_Zero-DCE++.html" target="_blank"><font color="#ff0000">[Project Page]</font></a>.</li>
 <li> 2021/05 --I am recognized as <strong>Outstanding Reviewer</strong>, IEEE CVPR 2021</li>
 <li> 2021/05 -- One paper has been recognized as <strong>ESI Highly Cited Paper</strong></li>
 <li> 2021/04 -- We release the code of our Zero-DCE++ (TPAMI2021).</li>
