--- a/index.html
+++ b/index.html
@@ -630,6 +630,7 @@ Signal Processing : Image Communication (Management Guest Editor)
 <li><a href="https://www.wordclouds.com/"><font color="#1C86EE">WordClouds</font></a></li>
 <li><a href="https://emojipedia.org/"><font color="#1C86EE">Emojipedia</font></a></li>
 <li><a href="https://deviparikh.medium.com/how-we-write-rebuttals-dc84742fece1/"><font color="#1C86EE">How we write rebuttals</font></a></li>
+<li><a href="https://www.computer.org/publications/tech-news/trends/deep-learning-vs-machine-learning-whats-the-difference?source=cssocial"><font color="#1C86EE">Deep Learning vs Machine Learning: What’s the Difference</font></a></li>
 </ul>
 <br>
 
