--- a/index.html
+++ b/index.html
@@ -597,9 +597,14 @@ a, a:visited { color : #0050e7; }
 Springer Journal of Signal, Image and Video Processing (IF: 1.794)
 
 <br><strong>Guest Editor</strong></br>
+IEEE Journal of Oceanic Engineering (Lead Guest Editor) ()
+
 Signal Processing : Image Communication (Management Guest Editor)
 
 <br>Multimedia Tools and Applications
+
+<br><strong>Associate Editor</strong></br>
+Springer Journal of Signal, Image and Video Processing (IF: 1.794)
 
 <br><strong>Reviewer</strong></br>
 <li><strong>IEEE</strong>:</li>TPAMI, TIP, TCyber, TCSVT, TNNLS, TMM, TB, TIM, TGARS, TITS, TCSVT II: Express Briefs, ACCESS, SPL, JOE, JBHI, J-STARS, MultiMedia
