--- a/index.html
+++ b/index.html
@@ -597,14 +597,14 @@ a, a:visited { color : #0050e7; }
 Springer Journal of Signal, Image and Video Processing (IF: 1.794)
 
 <br><strong>Guest Editor</strong></br>
-IEEE Journal of Oceanic Engineering (Lead Guest Editor) ()
+IEEE Journal of Oceanic Engineering (Lead Guest Editor) (IF: 2.9)
 
-Signal Processing : Image Communication (Management Guest Editor)
+Signal Processing: Image Communication (Management Guest Editor) (IF：2.779)
 
-<br>Multimedia Tools and Applications
+<br>Multimedia Tools and Applications (IF: 2.313)
 
-<br><strong>Associate Editor</strong></br>
-Springer Journal of Signal, Image and Video Processing (IF: 1.794)
+<br><strong>Session Chair</strong></br>
+Asia-Pacific Signal and Information Processing Association Annual Summit and Conference (APSIPA ASC) 2019
 
 <br><strong>Reviewer</strong></br>
 <li><strong>IEEE</strong>:</li>TPAMI, TIP, TCyber, TCSVT, TNNLS, TMM, TB, TIM, TGARS, TITS, TCSVT II: Express Briefs, ACCESS, SPL, JOE, JBHI, J-STARS, MultiMedia
